--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "framer-motion": "^6.3.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.9",
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
