--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# dotenv environment variables file
+.env
+.env.test
+
 # Runtime data
 pids
 *.pid
