--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -20,6 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
