--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "framer-motion": "^6.3.1",
@@ -19,6 +20,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
