--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.3.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
